--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
   "name": "web-sockets-training",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
+    "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "hbs": "^4.1.2",
     "socket.io": "^4.1.3"
   },
   "devDependencies": {
