--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "hbs": "^4.1.2",
+    "query-string": "^7.0.1",
+    "querystring": "^0.2.1",
+    "r2": "^2.0.1",
     "socket.io": "^4.1.3"
   },
   "devDependencies": {
